@@ -1,3 +1,12 @@
+2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>
+	
+	* gtksourceview/gtksourcecompletiontriggerkey.h:
+	* gtksourceview/gtksourcecompletiontriggerkey.c:
+	* tests/completion-simple.c:
+	
+	Changed trigger_key API from using accelerator string representation
+	to more common key/modifier API
+	
 2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* gtksourceview/gtksourcecompletion.c:
